docs: add documentation for Show All Openings
