# handler/showAllOpenings.go
@@ -7,6 +7,16 @@ import (
 	"github.com/stringGustavo/gopportunities.git/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show openings
+// @Description Show all existing job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ShowAllOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [get]
 func ShowAllOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
